@@ -139,7 +139,7 @@ static void _do_power_work(void)
 		if (susp_state)
 			susp_total++;
 		if (susp_state &&
-		    ((suspend_rate == 0) || (suspend_cnt <= suspend_rate)) &&
+		    ((suspend_rate == 0) || (suspend_cnt < suspend_rate))  &&
 		    (bit_test(suspend_node_bitmap, i) == 0)		   &&
 		    (IS_NODE_ALLOCATED(node_ptr) ||
 		     (node_ptr->last_idle > (now - idle_time)))) {
@@ -157,7 +157,7 @@ static void _do_power_work(void)
 		}
 		if (run_suspend 					&& 
 		    (susp_state == 0)					&&
-		    ((resume_rate == 0) || (resume_cnt <= resume_rate))	&&
+		    ((resume_rate == 0) || (resume_cnt < resume_rate))	&&
 		    IS_NODE_IDLE(node_ptr)				&&
 		    (!IS_NODE_COMPLETING(node_ptr))			&&
 		    (node_ptr->last_idle < (now - idle_time))		&&
